--- a/public/kanbas/sidebars/kanbas-navigation.css
+++ b/public/kanbas/sidebars/kanbas-navigation.css
@@ -2,30 +2,22 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    /*height: 100%;*/
     display: flex;
     flex-direction: row;
     height: 100vh;
-
-    /*border-spacing: 0;*/
 }
-table {
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-}
-
 
 .kanbas-nav {
     background-color: black;
     width: 85px;
     min-height: 100vh;
-    flex-grow: 1;
+    left: 0;
+    top: 0;
     padding: 0px;
-    font-size: 0.8em;
+    text-align: center;
     position: fixed;
     height: 100%;
-
+    font-size: 0.7em;
 }
 
 .kanbas-nav ul {
@@ -50,6 +42,7 @@ table {
 .kanbas-nav a i {
     display: block;
     margin-bottom: 5px;
+    color: red;
 }
 
 .kanbas-nav a span {
