--- a/src/Kanbas/Dashboard/index.css
+++ b/src/Kanbas/Dashboard/index.css
@@ -3,6 +3,14 @@
     max-width: 270px;
     margin-top: 30px;
     margin-bottom: 30px;
+
+    /*padding-left: 20px;*/
+    /*padding-right: 20px;*/
+    /*max-width: 100%;*/
+    /*max-height: 100%;*/
+    /*width: auto;*/
+    /*height: auto;*/
+
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: box-shadow 0.3s;
 }
