--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 .App {
   text-align: center;
-  margin: 0 auto;
 }
 
 .App-logo {
@@ -16,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
