--- a/src/Kanbas/Dashboard/index.css
+++ b/src/Kanbas/Dashboard/index.css
@@ -1,25 +1,10 @@
-.card {
-    min-width: 250px;
-    max-width: 270px;
-    margin-top: 30px;
-    margin-bottom: 30px;
-
-    /*padding-left: 20px;*/
-    /*padding-right: 20px;*/
-    /*max-width: 100%;*/
-    /*max-height: 100%;*/
-    /*width: auto;*/
-    /*height: auto;*/
-
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: box-shadow 0.3s;
+.kanbas-card-img {
+    width: 100%;
+    height: 150px;
+    background-color: blue;
 }
 
-.card:hover {
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-}
-
-.card-body a:hover .card-title,
-.card-body a:hover .card-text {
-    text-decoration: underline;
+.kanbas-card {
+    width: 400px;
+    margin-left: 10px;
 }
